# rms-check

./: .gitattributes  .gitignore  Cargo.toml  README.md  azure-pipelines.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
crates/rms-check/: Cargo.toml
crates/rms-check-lsp/: Cargo.toml
crates/rms-check-lsp/src/: folds.rs  lib.rs  main.rs
crates/rms-check-lsp/src/help/: en.rs  mod.rs
crates/rms-check-wasm/: .gitignore  Cargo.toml
crates/rms-check-wasm/src/: lib.rs
crates/rms-check/src/: checker.rs  def_aoc.rms  def_de.rms  def_hd.rms  def_up15.rms  def_wk.rms  diagnostic.rs  formatter.rs  lib.rs  parser.rs  state.rs  tokenizer.rs  tokens.rs  wordize.rs
crates/rms-check/src/lints/: actor_areas_match.rs  arg_types.rs  attribute_case.rs  comment_contents.rs  compatibility.rs  dead_branch_comment.rs  include.rs  incorrect_section.rs  mod.rs  unknown_attribute.rs
crates/rms-check/tests/rms/: Dry Arabia.rms  arg-types.rms  compatibility.rms  include.rms  unknown-attribute.rms
rms-check-js/: CHANGELOG.md  README.md  index.js  package.json
src/: UserPatchConst.rms  check.rs  checker.rs  cli_reporter.rs  highlight.rs  language_server.rs  lib.rs  main.rs  parser.rs  tokens.rs  wordize.rs  zip_rms.rs
src/lints/: attribute_case.rs  comment_contents.rs  dead_branch_comment.rs  include.rs  incorrect_section.rs  mod.rs  unknown_attribute.rs
tests/rms/: comment-contents.rms  dead-branch-comment.rms  incorrect-section.rms
vscode/: .gitignore  .npmignore  .vscodeignore  CHANGELOG.md  README.md  aoe2-rms.tmLanguage  language-configuration.json  package.json
vscode/client/: extension.js  store-zip.js
vscode/server/: Cargo.toml  index.js
vscode/server/src/: lib.rs  wasm.rs
