[package]
name = "rms-check"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]
license = "GPL-3.0"
description = "Detect common problems with AoE Random Map Scripts"
repository = "https://github.com/goto-bus-stop/rms-check.git"

[dependencies]
ansi_term = "^0.11.0"
codespan = "^0.2.0"
codespan-reporting = "^0.2.0"
either = "^1.5.0"
lazy_static = "^1.1.0"
multisplice = { git = "https://github.com/goto-bus-stop/multisplice-rs.git" }
quicli = "^0.3.0"
strsim = "^0.8.0"
termcolor = "^1.0.4"
