[package]
name = "rms-check-cli"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]
license = "GPL-3.0"
description = "Detect common problems with AoE Random Map Scripts"
repository = "https://github.com/goto-bus-stop/rms-check.git"
edition = "2018"

[[bin]]
name = "rms-check"
path = "src/main.rs"

[dependencies]
ansi_term = "^0.12.1"
codespan-reporting = "^0.4.1"
failure = "^0.1.5"
multisplice = "^0.1.0"
rms-check = { path = "crates/rms-check" }
rms-check-lsp = { path = "crates/rms-check-lsp" }
serde_json = "^1.0.37"
structopt = "^0.3.2"
termcolor = "^1.0.4"
zip = { version = "0.5.3", default-features = false } # only need `store`

[workspace]
members = [
  "crates/rms-check",
  "crates/rms-check-lsp",
  "vscode/server",
]
