[package]
name = "rms-check-cli"
version = "0.0.4"
authors = ["Renée Kooi <renee@kooi.me>"]
license = "GPL-3.0"
description = "Detect common problems with AoE Random Map Scripts"
repository = "https://github.com/goto-bus-stop/rms-check.git"
edition = "2018"

[[bin]]
name = "rms-check"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
ansi_term = "0.12"
anyhow = "1.0.40"
codespan-reporting = "0.11"
multisplice = "^0.3.0"
notify = "4.0.16"
rms-check = { version = "0.0.4", path = "crates/rms-check" }
rms-check-lsp = { version = "0.0.4", path = "crates/rms-check-lsp" }
serde_json = "1.0"
structopt = "0.3"
termcolor = "1.1"
zip = { version = "0.5", default-features = false } # only need `store`

[workspace]
members = [
  "crates/rms-check",
  "crates/rms-check-lsp",
]
