[package]
name = "rms-check-lsp"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]
license = "GPL-3.0"
description = "Language server for Age of Empires random map scripts."
repository = "https://github.com/goto-bus-stop/rms-check.git"
edition = "2018"

[dependencies]
codespan = "0.8"
codespan-lsp = "0.8"
jsonrpc-core = "14.0"
lazy_static = "1.4"
lsp-types = "0.71"
multisplice = "0.3"
rms-check = { path = "../rms-check/" }
serde_json = "1.0"
