[package]
name = "rms-check-lsp"
version = "0.0.4"
authors = ["Renée Kooi <renee@kooi.me>"]
license = "GPL-3.0"
description = "Language server for Age of Empires random map scripts."
repository = "https://github.com/goto-bus-stop/rms-check.git"
edition = "2018"

[dependencies]
jsonrpc-core = "17.1"
lazy_static = "1.4"
lsp-types = "0.89"
multisplice = "0.3"
rms-check = { version = "0.0.4", path = "../rms-check/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
