[package]
name = "rms-check-wasm"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]
license = "GPL-3.0"
description = "Detect common problems with AoE Random Map Scripts, in the browser"
repository = "https://github.com/goto-bus-stop/rms-check.git"

[lib]
crate-type = ["cdylib"]

[dependencies]
rms-check = { path = "../../" }
serde = "^1.0.0"
serde_json = "^1.0.0"
serde_derive = "^1.0.0"
wasm-bindgen = "^0.2"
