[package]
name = "rms-check"
version = "0.0.4"
authors = ["Renée Kooi <renee@kooi.me>"]
license = "GPL-3.0"
description = "Detect common problems with AoE Random Map Scripts"
repository = "https://github.com/goto-bus-stop/rms-check.git"
edition = "2018"

[dependencies]
chardet = "0.2"
cow-utils = "0.1.2"
encoding_rs = "0.8"
itertools = "0.9"
lazy_static = "1.4"
strsim = "0.10"
zip = { version = "0.5", default-features = false } # only need `store`

[dev-dependencies]
anyhow = "1.0.36"
