[package]
name = "rms-check-vscode-server-wasm"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]
license = "GPL-3.0"
description = "Detect common problems with AoE Random Map Scripts"
repository = "https://github.com/goto-bus-stop/rms-check.git"
edition = "2018"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
rms-check-lsp = { version = "0.0.2", path = "../../crates/rms-check-lsp" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde_json = "1.0"
wasm-bindgen = "0.2"
